Removed uses of deprecated methods.