@@ -71,10 +71,10 @@ public final class MathUtils {
      *
      * @param x Value
      * @param y Value
-     * @return {@code new Double(x).equals(new Double(y))}
+     * @return {@code Double.valueOf(x).equals(Double.valueOf(y))}
      */
     public static boolean equals(double x, double y) {
-        return new Double(x).equals(new Double(y));
+        return Double.valueOf(x).equals(Double.valueOf(y));
     }
 
     /**
