@@ -208,7 +208,7 @@ public abstract class UnivariateStatisticAbstractTest {
             double value = randomDataGenerator.nextNormal(mu, sigma);
             values[i] = value;
             for (int j = 0; j < intWeights[i]; j++) {
-                valuesList.add(new Double(value));
+                valuesList.add(Double.valueOf(value));
             }
         }
 
